--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <span class="project-stack">HTML | CSS | JavaScript | Bootstrap</span>
                             <p class="lead">Generator servicing company</p>
                             <div class="btn-group">
-                                <a class="btn btn--text" href="smartpowertechnologybd.com">Live project</a>
+                                <a class="btn btn--text" href="http://www.smartpowertechnologybd.com/">Live project</a>
                                 <a class="btn btn--text" onclick="newFunction();" href="#">Source Code</a>
                             </div>
                         </div>
