--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col">
                     <article class="section-hero--content">
-                        <h1 class="display-4">Hello, I am <strong>Saniyad</strong></h1>
+                        <h1 class="display-4">Assalamualikum, I am <strong>Saniyad</strong></h1>
                         <p class="lead">Front End Web Developer | Future Full Stack Developer <b>InshaAllah</b></p>
                         <a href="#about" class="btn btn-outline-primary btn-lg">Know More</a>
                     </article>
@@ -85,7 +85,7 @@
                         <!-- <a href="https://www.google.com/docs/your-resume" class="btn btn-lg btn--text btn-lg">Download my resume</a> -->
                     </div>
                     <div class="col-sm-5">
-                        <img src="https://avatars2.githubusercontent.com/u/32534752?s=400&v=4" alt="profile-pic" />
+                        <img src="https://scontent-sin6-2.xx.fbcdn.net/v/t34.0-12/29549952_1804641786255020_1871841934_n.jpg?_nc_cat=0&_nc_eui2=v1%3AAeGXZJ-_zSLmC8YxEaUYAXamdY3icFIuhXE7fXxWVvV2Nu7Hyn4bk0YqS4eDzXLfPPcm2vtzD9pZuvkyi_XCx829WkGMKBnFGD7pQQqL1sMzIw&oh=581a7aacc7dfa9df1a006cd000300b0c&oe=5ABC008A" alt="profile-pic" />
                     </div>
                 </div>
         </div>
